// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{"gfm":false,"commonmark":false} footnote-split 1`] = `
"<p>a<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>b<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>c<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-2\\">first def<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-1\\">second def<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">third def<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":false} footnotes 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>. One again: <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of first paragraph is not intended.
Nor is third...<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":false} regression-1 1`] = `
"<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">MyNote<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":false} regression-2 1`] = `
"<p>1 <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>
2 <sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>
3 <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
5 <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">alpha bravo one<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-2\\">alpha bravo two<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">alpha bravo third<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-5\\">foo<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-4\\">alpha bravo fourth<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":true} footnote-split 1`] = `
"<p>a<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>b<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>c<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-2\\">first def<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-1\\">second def<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">third def<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":true} footnotes 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>. One again: <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of first paragraph is not intended.
Nor is third...<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":true} regression-1 1`] = `
"<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">MyNote<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":false,"commonmark":true} regression-2 1`] = `
"<p>1 <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>
2 <sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>
3 <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
5 <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">alpha bravo one<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-2\\">alpha bravo two<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">alpha bravo third<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-5\\">foo<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-4\\">alpha bravo fourth<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":false} footnote-split 1`] = `
"<p>a<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>b<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>c<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-2\\">first def<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-1\\">second def<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">third def<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":false} footnotes 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>. One again: <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of first paragraph is not intended.
Nor is third...<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":false} regression-1 1`] = `
"<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">MyNote<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":false} regression-2 1`] = `
"<p>1 <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>
2 <sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>
3 <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
5 <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">alpha bravo one<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-2\\">alpha bravo two<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">alpha bravo third<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-5\\">foo<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-4\\">alpha bravo fourth<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":true} footnote-split 1`] = `
"<p>a<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>b<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>c<sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-2\\">first def<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-1\\">second def<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">third def<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":true} footnotes 1`] = `
"<p>This is the body with a footnote<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup> or two<sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup> or more <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup> <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup> <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>. One again: <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>Also a reference that does not exist<sup id=\\"fnref-6\\"><a href=\\"#fn-6\\" class=\\"footnote-ref\\">6</a></sup>.</p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">
<p>Footnote that ends with a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
</ul>
<p><a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-2\\">
<blockquote>
<p>This footnote is a blockquote.</p>
</blockquote>
<p><a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-3\\">
<p>A simple oneliner.<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-4\\">
<p>A footnote with multiple paragraphs.</p>
<p>Paragraph two.<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></p>
</li>
<li id=\\"fn-5\\">
<p>First line of first paragraph.
Second line of first paragraph is not intended.
Nor is third...<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></p>
</li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":true} regression-1 1`] = `
"<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<p>a<sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup><sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">MyNote<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;

exports[`{"gfm":true,"commonmark":true} regression-2 1`] = `
"<p>1 <sup id=\\"fnref-1\\"><a href=\\"#fn-1\\" class=\\"footnote-ref\\">1</a></sup>
2 <sup id=\\"fnref-2\\"><a href=\\"#fn-2\\" class=\\"footnote-ref\\">2</a></sup>
3 <sup id=\\"fnref-3\\"><a href=\\"#fn-3\\" class=\\"footnote-ref\\">3</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
4 <sup id=\\"fnref-5\\"><a href=\\"#fn-5\\" class=\\"footnote-ref\\">5</a></sup>
5 <sup id=\\"fnref-4\\"><a href=\\"#fn-4\\" class=\\"footnote-ref\\">4</a></sup></p>
<div class=\\"footnotes\\">
<hr>
<ol>
<li id=\\"fn-1\\">alpha bravo one<a href=\\"#fnref-1\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-2\\">alpha bravo two<a href=\\"#fnref-2\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-3\\">alpha bravo third<a href=\\"#fnref-3\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-5\\">foo<a href=\\"#fnref-5\\" class=\\"footnote-backref\\">↩</a></li>
<li id=\\"fn-4\\">alpha bravo fourth<a href=\\"#fnref-4\\" class=\\"footnote-backref\\">↩</a></li>
</ol>
</div>"
`;
